# cec-interface

./: settings.gradle.kts
app/: build.gradle.kts
app/src/androidTest/java/com/example/cec_interface/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CECInterface.cpp  CMakeLists.txt  cec_LibCEC.h
app/src/main/cpp/include/: cecc.h  version.h
app/src/main/java/com/example/cec_interface/: CECLogicalAddress.java  CECPowerStatus.java  CECUserControlCode.java  CECVendorId.java  LibCEC.java  Main.java  MainActivity.kt
app/src/main/res/layout/: activity_main.xml
app/src/main/res/raw/: cec_client.sh  cec_client_arm.sh
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
app/src/test/java/com/example/cec_interface/: ExampleUnitTest.kt
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
